--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.jorge.softdevelop.samples</groupId>
-			<artifactId>queueSample</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>pt.digitalis.poc</groupId>
+			<artifactId>jms-poc</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
